# yacl-r

./: .bazelignore  .bazelrc  .clang-tidy  .cmake-format.yaml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  README.md  SECURITY.md  STYLE.md  renovate.json
benchmark/: BUILD.bazel
yacl/: CMakeLists.txt  ossl_key_utils.cc  ossl_key_utils.h  ossl_key_utils_test.cc  ossl_wrappers.h
yacl/aead/: CMakeLists.txt  aead.cc  aead.h  aead_test.cc  all_gcm.cc  all_gcm.h  all_gcm_test.cc  sm4_mte.cc  sm4_mte.h  sm4_mte_test.cc
yacl/aes/: aes_intrinsics.h  aes_opt.h  aes_test.cc
yacl/base/: BUILD.bazel  CMakeLists.txt  block.h  block_bench.cc  buffer.cc  buffer.h  buffer_fuzz.cc  buffer_test.cc  byte_container_view.h  dynamic_bitset.h  dynamic_bitset_test.cc  exception.cc  exception.h  exception_test.cc  int128.cc  int128.h  int128_test.cc  secparam.cc  secparam.h  secparam_test.cc  strings.cc  strings.h  strings_test.cc
yacl/bc/: CMakeLists.txt  block_cipher.cc  block_cipher.h  block_cipher_test.cc  symmetric_crypto.cc  symmetric_crypto.h  symmetric_crypto_test.cc
yacl/block_cipher/: block_cipher.cc  block_cipher_test.cc  symmetric_crypto.cc  symmetric_crypto.h  symmetric_crypto_test.cc
yacl/coding/: CMakeLists.txt
yacl/coding/batch/: CMakeLists.txt  cuckoo_index.cc  cuckoo_index_test.cc
yacl/crypto/: BUILD.bazel  CMakeLists.txt  key_utils.cc  key_utils.h  secparam_coverage_test.cc
yacl/crypto/dpf/: dcf.h  (+9 more)
yacl/dpf/: CMakeLists.txt  dcf.cc  dcf.h  dcf_test.cc  dpf.cc  dpf.h  dpf_test.cc  ge2n.h  pprf.cc  pprf.h  pprf_test.cc
yacl/engine/: CMakeLists.txt
yacl/envelope/: digital_envelope.cc  digital_envelope.h  digital_envelope_test.cc
yacl/experimental/: CMakeLists.txt  benchmark.cc  benchmark.h  crhash.cc  crhash.h  crhash_test.cc  cuckoo_index.cc  cuckoo_index_test.cc  prg.cc  prg.h  prg_test.cc  ro.h  ro_test.cc  rp.cc  rp.h  rp_test.cc
yacl/hash/: CMakeLists.txt  blake3.cc  blake3.h  blake3_bench.cc  blake3_test.cc  hash.h  hash_fuzz.cc  hash_interface.h  hash_utils.cc  hash_utils.h  ssl_hash.cc  ssl_hash.h  ssl_hash_all_test.cc
yacl/hmac/: CMakeLists.txt  hmac.cc  hmac.h  hmac_all_test.cc  hmac_sha256.h  hmac_sm3.h
yacl/io/: CMakeLists.txt
yacl/kem/: CMakeLists.txt  ec.cc  ec.h  kem.h  kem_test_ec.cc  kem_test_rsa.cc  rsa.cc  rsa.h
yacl/kernel/: CMakeLists.txt  kernel.h  ot_kernel.cc  ot_kernel.h  ot_kernel_test.cc  svole_kernel.cc  svole_kernel.h  svole_kernel_bench.cc  svole_kernel_test.cc
yacl/link/: CMakeLists.txt  context.cc  context.h  context_test.cc  factory.h  factory_asio.cc  factory_mem.cc  factory_test.cc  retry_options.h  ssl_options.h  test_util.h  trace.cc  trace.h
yacl/math/: CMakeLists.txt  gadget.h
yacl/mpc/: CMakeLists.txt  kernel.h  ot_bench.h  ot_kernel.cc  ot_kernel.h  ot_kernel_bench.cc  ot_kernel_test.cc  plaintext_executor.cc  plaintext_executor.h  plaintext_executor_test.cc  ss_executor.cc  ss_executor.h  ss_executor_test.cc  svole_kernel.cc  svole_kernel.h  svole_kernel_bench.cc  svole_kernel_test.cc  types.h  vole_bench.cc
yacl/oprf/: oprf.h  oprf_ctx.cc  oprf_ctx.h  oprf_test.cc
yacl/ossl_provider/: provider.cc  provider_test.cc  rand_impl.h
yacl/ot/: CMakeLists.txt  base_ot.cc  base_ot.h  base_ot_test.cc  ferret_ote.cc  ferret_ote.h  ferret_ote_rn.h  ferret_ote_test.cc  ferret_ote_un.h  gywz_ote.cc  gywz_ote.h  gywz_ote_test.cc  iknp_ote.cc  iknp_ote.h  iknp_ote_test.cc  kkrt_ote.cc  kkrt_ote.h  kkrt_ote_test.cc  kos_ote.cc  kos_ote.h  kos_ote_test.cc  ot_bench.cc  ot_bench.h  ot_store.cc  ot_store.h  ot_store_test.cc  ot_store_utils.cc  ot_store_utils.h  portable_ot_interface.cc  portable_ot_interface.h  sgrr_ote.cc  sgrr_ote.h  sgrr_ote_test.cc  slice_base.cc  softspoken_ote.cc  softspoken_ote.h  softspoken_ote_test.cc  x86_asm_ot_interface.cc  x86_asm_ot_interface.h
yacl/pke/: CMakeLists.txt  pke.h  pke_interface.h  pke_test_rsa.cc  pke_test_sm2.cc  rsa.cc  rsa.h  rsa_enc.cc  rsa_enc.h  rsa_enc_test.cc  sm2.cc  sm2.h  sm2_enc.cc  sm2_enc.h  sm2_enc_test.cc
yacl/rand/: CMakeLists.txt  rand.cc  rand.h  rand_bench.cc  rand_test.cc
yacl/sign/: CMakeLists.txt  ml_dsa.cc  ml_dsa.h  rsa.cc  rsa.h  rsa_signing.cc  rsa_signing.h  rsa_signing_test.cc  sign.h  sign_test_ml_dsa.cc  sign_test_rsa.cc  sign_test_sm2.cc  signing.h  sm2.cc  sm2.h  sm2_signing.cc  sm2_signing.h  sm2_signing_test.cc
yacl/snark/: circuit_builder.cc  circuit_builder.h  circuit_builder_test.cc  gadgets.cc  gadgets.h  gadgets_test.cc  groth16.cc  groth16.h  groth16_fuzz.cc  groth16_test.cc  qap.cc  qap.h  qap_test.cc  r1cs.cc  r1cs.h  r1cs_test.cc  serialization.cc  serialization.h
yacl/theoretical_tools/: common.h  crhash.cc  crhash.h  crhash_test.cc  prg.cc  prg_test.cc  ro_test.cc  rp.cc  rp_test.cc  theoretical_tool_bench.cc  theoretical_tool_bench.h
yacl/tools/: benchmark.h  common.h  crhash.cc  crhash.h  crhash_test.cc  cuckoo_index.cc  cuckoo_index.h  cuckoo_index_test.cc  prg.cc  prg.h  prg_test.cc  ro.h  ro_test.cc  rp.cc  rp.h  rp_test.cc
yacl/tpre/: capsule.cc  capsule.h  capsule_test.cc  hash.cc  hash.h  hash_test.cc  kdf.cc  kdf.h  kdf_test.cc  keys.cc  keys.h  keys_test.cc  tpre.cc  tpre.h  tpre_test.cc
yacl/utils/: BUILD.bazel  CMakeLists.txt  block.h  block_bench.cc  buffer.cc  buffer.h  buffer_fuzz.cc  buffer_test.cc  byte_container_view.h  compile_time_utils.h  dynamic_bitset.h  dynamic_bitset_test.cc  exception.cc  exception.h  exception_test.cc  hamming.h  int128.cc  int128.h  int128_bench.cc  int128_test.cc  matrix_utils.cc  matrix_utils.h  parallel.h  parallel_test.cc  scope_guard.h  secparam.cc  secparam.h  secparam_test.cc  secparam_utils.h  serialize.h  serializer.h  serializer_adapter.h  serializer_fuzz.cc  serializer_test.cc  strings.cc  strings_test.cc  thread_pool.h
yacl/vole/: CMakeLists.txt  base_vole.h  base_vole_test.cc  mp_vole.h  mp_vole_test.cc  mpfss.cc  mpfss.h  mpfss_test.cc  silent_vole.cc  silent_vole.h  silent_vole_test.cc  vole_bench.cc
yacl/vss/: CMakeLists.txt  poly.cc  poly.h  vss.cc  vss.h  vss_test.cc
(+719 files in other folders)
